all req files uploading for whatsapp desktop

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+
+.chatname::-webkit-scrollbar{
+    width: 2px !important;
+    height: 5px !important;
+  
+}
+.languageDropdown::-webkit-scrollbar{
+    width: 2px !important;
+    height: 5px !important;
+  
+}
+.chatname::-webkit-scrollbar-track{
+    width: 2px !important;
+   height: 3px;
+    background-color: white;
+}
+.chatname::-webkit-scrollbar-thumb {
+    background: rgba(128, 128, 128, 0.2);
+   
+    min-height: 5px;
+    border-radius: 10px;
+}
+.languageDropdown::-webkit-scrollbar-thumb {
+    background: rgba(128, 128, 128, 0.6);
+   
+    max-height: 5px;
+    border-radius: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
